...
			setShowExams(!showExams)
		}
	}

	return (
		<ScrollView
			testID="timetable-preferences-screen"
			style={{
				paddingBottom: insets.bottom + 32
			}}
			contentInsetAdjustmentBehavior="automatic"
			showsVerticalScrollIndicator={false}
		>
			<View className="flex-1">
				<SectionView title={t('timetable:preferences.title')}>
					<SingleSectionPicker
						testID="timetable-list-mode"
						title={t('timetable:viewModes.list')}
						selectedItem={timetableMode === TimetableMode.List}
						action={toggleListMode}
					/>
				</SectionView>

...
