...
			})
		}
	}, [shouldOpenExam])

	return (
		<View
			testID="calendar-screen"
			className="flex-1"
			style={{ paddingTop: headerPadding }}
		>
			<View className="border-border pb-3.5 px-page">
				<ToggleRow
					items={displayTypes}
...
