...
			]
		}
	]

	return (
		<Animated.ScrollView
			testID="lecture-details-screen"
			onScroll={scrollHandler}
			scrollEventThrottle={16}
			contentContainerClassName="flex pb-bottom-safe px-page pt-page"
			contentInsetAdjustmentBehavior={contentInsetAdjustmentBehavior}
		>
			<Stack.Screen
...
