...
				}}
				isCritical={false}
			/>
		</View>
	) : (
		<FlashList
			testID="home-screen"
			key={orientation}
			contentInsetAdjustmentBehavior="automatic"
			contentContainerClassName={
				columns > 1 ? 'px-1.5 pt-1.5 bg-background' : 'pt-1.5 bg-background'
			}
			showsVerticalScrollIndicator={false}
...
