...
                msg = t('login.alert.error.backend')
            }
            Alert.alert(
                title,
                msg,
                [
                    { text: 'OK' },
                    ...(showStatus
                        ? [
                              {
                                  text: t('error.crash.status', {
                                      ns: 'common',
                                  }),
...
