...
				isCritical={false}
			/>
		)
	}
	return (
		<ScrollView
			testID="app-icon-screen"
			contentContainerClassName="self-center pb-[50px] w-full"
			contentInsetAdjustmentBehavior="automatic"
			showsVerticalScrollIndicator={false}
		>
			{/* Exclusive section */}
			<SectionView
...
