...
		{ key: 'green', title: t('theme.accent.green') },
		{ key: 'purple', title: t('theme.accent.purple') }
	]

	return (
		<ScrollView
			testID="theme-screen"
			className="flex-1 bg-background"
			style={{ paddingTop: headerPadding }}
		>
			{Platform.OS !== 'web' && (
				<SectionView title={t('settings:theme.splash.title')}>
					<SingleSectionPicker
...
