...
		})
	}

	const cardContent = (
		<Link asChild href={`/food/${meal.id}`}>
			<Pressable
				testID="food-meal-entry"
				delayLongPress={300}
				onLongPress={() => {
					/* nothing */
				}}
				className="mt-2.5"
			>
...
