...
	const handleCancel = () => {
		onCancel()
	}

	return (
		<Modal
			testID="wallet-security-modal"
			visible={visible}
			transparent
			animationType="fade"
			onRequestClose={handleCancel}
		>
			<Pressable
...
								/>
							</Pressable>
						</View>

						<View className="items-center">
							<Pressable
								testID="wallet-cancel"
								onPress={handleCancel}
								className="py-3 px-6 rounded-md items-center justify-center bg-card-button active:opacity-70"
							>
								<Text className="font-semibold text-text">
									{t('securityWarning.buttons.useAppInstead')}
								</Text>
...
