...
			group.toLowerCase().includes('ehrenmitglied')
		) ?? false

	return (
		<View className="mt-2.5">
			<Pressable
				testID="member-area-entry"
				onPress={() => router.navigate('/member')}
				className="ios:rounded-ios android:rounded-md web:rounded-md overflow-hidden w-full active:opacity-90 border-hairline border-border"
			>
				<LinearGradient
					colors={['#000', '#014428']}
					start={{ x: -0.5, y: 0.5 }}
...
