...
			}
		]
	}

	return (
		<ScrollView
			testID="member-screen"
			contentContainerClassName="px-page pt-5 pb-[30px]"
			showsVerticalScrollIndicator={false}
			contentInsetAdjustmentBehavior="automatic"
			refreshControl={
				<RefreshControl
					refreshing={isRefetchingByUser}
...
